# cricket-stats-backend

./: .gitignore  alembic.ini  pyproject.toml  tmp_nvplay_page.html  urls.txt
alembic/: env.py
alembic/versions/: 0f7fad5a19a4_add_nvplay_match_id.py  1af6cecf6249_add_match_season.py  5f29e6e4803c_add_team_id_to_performances.py  a0bfee6cc133_initial_schema.py
app/: main.py
app/api/: leaderboards.py  matches.py  players.py  teams.py
app/core/: config.py
app/db/: models.py  repositories.py  session.py
app/schemas/: api.py  scorecard.py
app/services/ingestion/: match_ingestor.py
app/services/scraping/: match_scraper.py  nvplay_client.py
scripts/: ingest_scorecard.py  ingest_urls.py  inspect_scorecard.py  inspect_tables.py  test_scrape.py
